Renamed Home to Splash, fixed menu wrapping

--- a/style/style.css
+++ b/style/style.css
@@ -56,7 +56,8 @@ body{
     align-items: flex-end;
 }
 
-.menuOption, .subMenuOption {
+.menuOption, .subOption {
+	white-space: nowrap;
 	text-align: center;
 	color: black;
 	display: block;
@@ -66,345 +67,28 @@ body{
 	margin: 10px;
 }
 
-.menuOption.subMenuOption {
+.menuOption::before, .subOption::before {
+	content: "- ";
+	opacity: 0;
+}
+
+.menuOption::after, .subOption::after {
+	content: " -";
+	opacity: 0;
+}
+
+.menuOption.subOption {
 	font-size: 16px;
-	padding-top: 10px;
+	padding-bottom: 10px;
 	margin: 0px;
+	color: rgb(150, 150, 150);
 }
 
-.menuOption.collapsed > .subMenuOption {
+.menuOption.collapsed > .subOption {
 	display: none;
 }
 
-.menuSelection{
-	color: rgb(180, 180, 200);
-}
 
-.menuSelection::before {
-  content: '- ';
-}
-
-.menuSelection::after {
-  content: ' -';
-}
-
-.pagecontent {
-	background-color: white;
-	top: 200px;
-	bottom: 0px;
-	left: 0px;
-	right: 0px;
-	overflow: scroll;
-	padding: 5% 0;
-	position: absolute;
-}
-
-.clickable:hover {
-	text-align: left;
-	opacity: 0.7;
-	transition: opacity 0.1s;
-	transition-timing-function: ease-in-out;
-	cursor: pointer;
-}
-
-.highlighted {
-	padding: 3px;
-	border-radius: 2px;
-	background-color: #d9e5b5 !important;
-	opacity: 1 !important;
-}
-
-dot{
-	display: inline-block;
-	background-color: #94D8ED;
-	width: 6px;
-	height: 6px;
-	border-radius: 3px;
-	margin: 4px 5px;
-}
-
-.menu {
-	padding: 50px 50px;
-	display: flex;
-	width: 100%;
-	position: absolute;
-	bottom: 0px;
-	top: 0px;
-	flex-direction: column;
-	justify-content: flex-start;
-	background-image: linear-gradient(to left, rgb(255, 255, 255, 0), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 1));
-}
-
-.topbarheaders {
-	display:flex;
-	align-items:top;
-	flex-direction: column;
-	justify-content:flex-start;
-	font-size: 20px;
-	color: #243249;
-}
-
-#index {
-  content: "";
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;   
-}
-
-.projectinfo {
-	display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between;
-    margin-top: 30px;
-}
-
-.projectinfo >img {
-	object-fit: contain;
-	margin-right: 30px;
-	width: 30%;
-}
-
-.projectinfo > table {
-	flex: 1;
-}
-
-.projectrow > td:first-child {
-	padding-right: 30px;
-	width: 100px;
-}
-
-
-.topbarheader, .header {
-	display: inline-block;
-	line-height: 1;
-	vertical-align: top;
-	text-decoration: none !important;
-	margin-bottom: 20px;
-}
-
-tr > td {
-	padding: 3px;
-}
-
-tr > td:first-child {
-	font-weight: bold; 
-	padding-right: 30px;
-}
-
-table {
-	margin-top: 5px;
-}
-
-.className{
-	font-weight: normal !important;
-	font-style: italic;
-}
-
-.showName{
-	font-style: italic;
-}
-.header{
-	margin-bottom: 2px;
-}
-
-.topbarsubheader {
-	display: block;
-	text-align: left;
-	padding: 3px;
-	text-decoration: none !important;
-}
-
-.grid-item {
-  width: 30%;
-  margin-bottom: 30px;
-}
-
-.grid-item>img, .grid-item>div{
-  width: 80% !important;
-  margin-left: 10%;
-}
-
-.smaller>img, .smaller>div{
-  width: 50% !important;
-  margin-left: 25%;
-}
-
-
-::-webkit-scrollbar { 
-    display: none; 
-}
-
-a{
-	color: #666;
-}
-
-.hidden {
-	display: none;
-}
-
-#leftbar {
-	width: 200px;
-	background-color: 'black';
-}
-
-#work, #slides{
-	text-align: left;
-	width: auto;
-  	overflow-y: hidden;
-  	overflow-x: scroll;
-  	white-space: nowrap;
-}
-
-.workSlide{
-	display: inline-block;
-	margin: 0px;
-	padding: 0px;
-}
-
-.workImage {
-	height: 350px;
-	margin: 0px;
-	padding: 0px;
-}
-
-.fullscreen {
-	position:  absolute;
-	top: 0px;
-	bottom: 0px;
-	height: 100%;
-	width: 100%;
-	left: 0px;
-	right: 0px;
-}
-
-.videoWrapperWrapper {
-	margin-bottom: 10px;
-}
-
-.videoWrapper {
-	position: relative;
-	padding-bottom: 56.25%; /* 16:9 */
-	height: 0;
-} 
-
-.videoWrapper iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-
-.centered {
-	margin-right: 0px;
-	display: block;
-}
-
-.centeredImage {
-	width: 60%;
-	margin-left: 20%;
-}
-
-
-
-i {
-	font-style: italic;
-}
-
-.text {
-	color: #666;
-	line-height: 1.4;
-	width: 90%;
-	padding: 0 5% 30px 5%;
-	text-align: left;
-}
-
-.text2 {
-	color: #666;
-	line-height: 1.4;
-	width: 60%;
-	padding: 5% 20% 0% 20%;
-	text-align: left;
-}
-
-.workTitle{
-	padding-top: 5px;
-	display: block;
-	font-style: italic;
-}
-
-.workYear, .workMedium{
-	margin-top: 5px;
-}
-
-@media (max-width: 620px) {
-
-	#index {
-	  	background: none;
-	}
-
-	body {
-		font-size: 16px;
-	}
-
-	.grid-item {
-		width: 95%;
-	}
-
-	.menu {
-		flex-direction: column;
-		height: auto;
-    	padding: 30px 0px;
-	}	
-
-	.topbarheaders {
-		flex-direction: column;
-	}
-
-	.topbarheader, .topbarsubheader{
-		text-align: center !important;
-	}
-
-	.topbarheader {
-		margin-top: 10px;
-		padding-top: 3px;
-	}
-
-	td { 
-		display: block !important;
-	}
-
-	tr > td:first-child {
-		padding-top: 15px;
-
-	}
-
-	.projectinfo {
-    	flex-direction: column;
-	}
-	.projectinfo > img{
-    	width: 100%;
-	}
-
-	.projectrow > td {
-		padding-top: 0px !important;
-	}
-
-	.projectrow > td {
-		padding: 0px;
-	}
-
-	.logo {
-		height: 70px !important;
-	}
-
-
+.menuSelection::before, .menuSelection::after {
+  opacity: 1;
 }
